--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@firebase/firestore": "^4.3.2",
     "@mui/icons-material": "^5.14.18",
+    "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
